# EAGV2

./: .gitignore  Persona.md  prompt.md  prompt_reply_assistant.md
agent_mail/: .env  credentials.json  email_analyzer.py  llm.py  main.py  pyproject.toml  token.json
explain-with-ai/: ExplainWithGemini.avif  README.md  UPGRADE-SUMMARY.md  configure-api-key.html  convert-icon.html  create-cool-icons.html  manifest.json  setup-extension.js  update-icons.js
explain-with-ai/src/: background.js  content.js  options.css  options.html  options.js  popup.css  popup.html  popup.js
explain-with-ai/utils/: gemini.js
session10/: decision_output.json  main_modified.py  perception_test_examples_output.json
session10/action/: compile_explanation.py  compile_in_executor.md  executor_examples.md  quick_test.py  test_executor.py
session10/agent/: agent_loop2.py  agent_loop_modified.py  context_builders.py
session10/config/: mcp_server_config.yaml
session10/decision/: decision_modified.py  decision_test.py
session10/mcp_servers/: mcp_server_1.py  mcp_server_3.py  mcp_server_4.py
session10/perception/: perception_modified.py
session10/prompts/: decision_prompt.yaml  perception_prompt.yaml  prompt_check.py
session10/utils/: __init__.py  llm_utils.py  prompt_utils.py  utils.py
session4/: ACCESSIBILITY_SETUP.md  pyproject.toml  talk2mcp.py  talk2mcp_agent.py  test_preview_drawing.py
session5/: agent_prompt.yaml  main.py  mcp_server_mac.py  prompt_tuning.md  requirements_mac.txt  session4.md  talk2mcp.py  talk2mcp_agent.py  utils.py
