[project]
name = "session4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "atomacos>=3.3.0",
    "dotenv>=0.9.9",
    "google-api-python-client>=2.184.0",
    "google-genai>=1.41.0",
    "mcp>=1.16.0",
    "osascript>=2020.12.3",
    "pillow>=11.3.0",
    "psutil>=7.1.0",
    "pyautogui>=0.9.41",
    "pynput>=1.8.1",
    "pyobjc>=11.1",
    "reportlab>=4.4.4",
]
